--- a/shopping website/home.html
+++ b/shopping website/home.html
@@ -216,13 +216,12 @@
             <h4>Wrist Band 4</h4>
             <small>Arms & Wrist Bands, Wearable Tech
                 Fitbit Charge 4 Advanced Fitness Tracker</small>
-                <li><a href="details.html">Details</a></li>
         </div>
     </div>
 </div>
 
 
-<!----------footer----------->
+!----------footer----------->
 <div class="footer">
     <div class="container">
     <div class="row">
@@ -256,9 +255,9 @@
       <hr>
       <p class="Copyright">Copyright 2020 - Calebs Collection<br>
        Email:<a href="mailto:info@calebscollection.com"> info@calebscollection.com </a><br>  
-       Tel :<a href="tel:+254111752469">+254111752469</a><br>
+       Tell :<a href="tell:+254111752469">+254111752469</a><br>
       </p>
     </div>
 </div>
    </body>
-</html>
+</html> 
