--- a/shopping website/details.html
+++ b/shopping website/details.html
@@ -55,7 +55,9 @@ Gender:	Men
 Model:	Tight
  </details>
                 <p>$60.00</p>
-                <button>Buy Now</button>
+                <button class="ml-auto btn">
+                    <i class="fas fa-plus"></i> ADD TO CART
+                  </button>
             </div>
             <div class="col-4">
                 <img src="images/product-8.jpg">
@@ -76,7 +78,9 @@ Model:	Tight
                     Touch: smooth<br>
                 </details>
                 <p>$55.00</p>
-                <button>Buy Now</button>
+                <button class="ml-auto btn">
+                    <i class="fas fa-plus"></i> ADD TO CART
+                  </button>>
             </div>
             <div class="col-4">
                 <img src="images/product- 3.jpg">
@@ -98,7 +102,9 @@ Model:	Tight
                     Touch: smooth<br>
                 </details>
                 <p>$35.70</p>
-                <button>Buy Now</button>
+                <button class="ml-auto btn">
+                    <i class="fas fa-plus"></i> ADD TO CART
+                  </button>
             </div>
             <div class="col-5">
                 <img src="images/Product -7.jpg">
@@ -122,7 +128,9 @@ Model:	Tight
                     Style: Casual<br>
                 </details>
                 <p>$45.70</p>
-                <button>Buy Now</button>
+                <button class="ml-auto btn">
+                    <i class="fas fa-plus"></i> ADD TO CART
+                  </button>
             </div>
             <div class="col-4">
                 <img src="images/Japan Clothes.jpg">
@@ -145,7 +153,9 @@ Model:	Tight
                     Style: Casual<br>
                 </details>
                 <p>$39.70</p>
-                <button>Buy Now</button> 
+                <button class="ml-auto btn">
+                    <i class="fas fa-plus"></i> ADD TO CART
+                  </button>
         </div>
     </div>
 
@@ -175,7 +185,9 @@ Color: Black<br>
 Size: 41,42,43,44<br>
             </details>
             <p>$11.30</p>
-            <button>Buy Now</button>
+            <button class="ml-auto btn">
+                <i class="fas fa-plus"></i> ADD TO CART
+              </button>
         </div>
         <div class="col-5">
             <img src="images/Afro black for men.jpg">
@@ -200,7 +212,9 @@ Color: Black<br>
 Size: 41,42,43,44<br>
             </details>
             <p>$21.30</p>
-            <button>Buy Now</button>
+            <button class="ml-auto btn">
+                <i class="fas fa-plus"></i> ADD TO CART
+              </button>
         </div>
         <div class="col-5">
             <img src="images/CRKAS Shoes Men.jpg">
@@ -226,7 +240,9 @@ Color: Black<br>
 Size: 41,42,43,44<br>
             </details>
             <p>$14.30</p>
-            <button>Buy Now</button>
+            <button class="ml-auto btn">
+                <i class="fas fa-plus"></i> ADD TO CART
+              </button>
         </div>
         <div class="col-5">
             <img src="images/Revo-X Air Mix Mesh Black.jpg">
@@ -247,7 +263,9 @@ Style: Loafers<br>
 durable<br>
  </details>
             <p>$20.70</p>
-            <button>Buy Now</button>
+            <button class="ml-auto btn">
+                <i class="fas fa-plus"></i> ADD TO CART
+              </button>
     </div>
 
 </div>
@@ -283,7 +301,9 @@ durable<br>
         Backlit Keyboard<br>
     </details>
     <p>$780.00</p>
-    <button>Buy Now</button>
+    <button class="ml-auto btn">
+        <i class="fas fa-plus"></i> ADD TO CART
+      </button>
 </div>
 
 <div class="col-4">
@@ -311,7 +331,9 @@ Memory  8GB<br>
 Warranty / Months 12<br>
     </details>
     <p>$189.70</p>
-    <button> buy Now</button>
+    <button class="ml-auto btn">
+        <i class="fas fa-plus"></i> ADD TO CART
+      </button>
 </div>
 
 <div class="col-5">
@@ -337,7 +359,9 @@ Warranty / Months 12<br>
     </p>
       </details>
     <p>$350.70</p>
-    <button> buy Now</button>
+    <button class="ml-auto btn">
+        <i class="fas fa-plus"></i> ADD TO CART
+      </button>
 </div>
 
 <div class="row"> 
@@ -365,7 +389,9 @@ Warranty / Months 12<br>
     </p>
       </details>
     <p>$550.70</p>
-    <button> buy Now</button>
+    <button class="ml-auto btn">
+        <i class="fas fa-plus"></i> ADD TO CART
+      </button>
     </div> 
 <div class="col-5">
     <img src="images/Nokia-8000-4G-db-240x.webp">
@@ -390,7 +416,9 @@ Warranty / Months 12<br>
     </p>
       </details>
     <p>$120.70</p>
-    <button> buy Now</button>
+    <button class="ml-auto btn">
+        <i class="fas fa-plus"></i> ADD TO CART
+      </button>
 </div>
 
 <div class="col-5">
@@ -419,7 +447,9 @@ Warranty / Months 12<br>
     </p>
       </details>
     <p>$150.70</p>
-    <button> buy Now</button>
+    <button class="ml-auto btn">
+        <i class="fas fa-plus"></i> ADD TO CART
+      </button>
     
 </div>
 <div class="col-5">
@@ -447,7 +477,9 @@ Warranty / Months 12<br>
     </p>
       </details>
     <p>$270.70</p>
-    <button> buy Now</button>
+    <button class="ml-auto btn">
+        <i class="fas fa-plus"></i> ADD TO CART
+      </button>
 </div>
 </div>
 
@@ -461,6 +493,10 @@ Warranty / Months 12<br>
             <h4>Wrist Band 4</h4>
             <small>Arms & Wrist Bands, Wearable Tech
                 Fitbit Charge 4 Advanced Fitness Tracker</small>
+                <button class="ml-auto btn">
+                    <i class="fas fa-plus"></i> ADD TO CART
+                  </button>
+
         </div>
     </div>
 </div>
