--- a/shopping website/details.html
+++ b/shopping website/details.html
@@ -4,28 +4,44 @@
     <meta charset="UTF-8">
     <title>Calebs Collection</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,200;0,300;0,600;1,100;1,400&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
-</head>
-<body>
-    <div class="header">
-            <div class="container">
-                <div class="navbar">
-                    <div class="logo">
-                        <img src="images/calebs. logomain.jpg" width ="125px">
-                        <nav>
-                            <ul>
-                                <li><a href="home.html">Home</a></li>
-                                <li><a href="shopping cart.html">Shopping cart</a></li>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="account.html">Account</a></li>
-                               <img src="images/cart.png"width="30px ""height="30px">
-                     <li><input type="text" placeholder="Search.."></li>
-                            </div>
-                            </ul> 
-                     </nav>
-</div>
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,200;0,300;0,600;1,100;1,400&display=swap" rel="stylesheet"> 
+</header>
+    <body>
+<div class="header">
+        <div class="container">
+            <div class="navbar">
+                <div class="logo">
+                    <img src="images/calebs. logomain.jpg" width ="125px">
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="shopping cart.html">Shopping cart</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="account.html">Account</a></li>
+             <li><input type="text" placeholder="Search.."></li>
+                    </div>
+                    </ul> 
+             </nav
+             
+          </div>
+          <div class="row">
+              <div class="col-2">
+                  <h1>Give Your Path<br> A New Look!</h1>
+                  <p>Journey of a Milestone begins with single knot<br>
+                Success is allowing yourself to feel comfortable in incomfortable situation<br>
+            </p>
+              </div>
+              <a href=""class="btn">Explore Now &#8593</a>
+                  <div class="col-2">
+                      <img src="images/layer image.jpg">
+                  </div>
+          </div>
+        </div>
+     </div>
+        </div>
+    </div> 
     <!------MEN'S CLOTHES--------> 
     <div class="small-container">
         <h2 class="title">MEN'S CLOTHES</h2>
